--- a/weather.html
+++ b/weather.html
@@ -4,7 +4,7 @@
 		<meta charset="UTF-8" />
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
-		<title>Weather</title>
+		<title>My Weather App</title>
 		<link rel="stylesheet" href="src/style.css" />
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -67,11 +67,7 @@
 								</div>
 							</div>
 						</form>
-						<h5
-							class="clearfix"
-							id="date">
-							Date Time
-						</h5>
+						<h5 class="clearfix" id="date">Date Time</h5>
 					</div>
 					<div class="col">
 						<div class="row">
@@ -177,6 +173,8 @@
 					</p>
 				</div>
 			</div>
+					<footer>Created by Amy</footer>
+
 		</div>
 		<script src="src/index.js"></script>
 	</body>
