--- a/index.html
+++ b/index.html
@@ -5,7 +5,6 @@
 		<meta http-equiv="X-UA-Compatible" content="IE=edge" />
 		<meta name="viewport" content="width=device-width, initial-scale=1.0" />
 		<title>My Weather App</title>
-		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 
 		<link rel="preconnect" href="https://fonts.googleapis.com" />
 		<link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -14,17 +13,12 @@
 			rel="stylesheet"
 		/>
 		<link
-			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/css/bootstrap.min.css"
+			href="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/css/bootstrap.min.css"
 			rel="stylesheet"
-			integrity="sha384-0evHe/X+R7YkIZDRvuzKMRqM+OrBnVFBL6DOitfPri4tjfHxaWutUpFmBp4vmVor"
-			crossorigin="anonymous"
 		/>
 		<link rel="stylesheet" href="src/style.css" />
-		<script
-			src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0-beta1/dist/js/bootstrap.bundle.min.js"
-			integrity="sha384-pprn3073KE6tl6bjs2QrFaJGz5/SUsLqktiwsUTF55Jfv3qYSDhgCecCxMW52nD2"
-			crossorigin="anonymous"
-		></script>
+		<script src="https://cdn.jsdelivr.net/npm/bootstrap@5.2.0/dist/js/bootstrap.bundle.min.js"></script>
+		<script src="https://unpkg.com/axios/dist/axios.min.js"></script>
 	</head>
 	<body class="bg-light bg-gradient">
 		<div class="body bg-success p-2 text-dark bg-opacity-25 shadow">
@@ -67,13 +61,13 @@
 								</div>
 							</div>
 						</form>
-						<div class="col-3">
-							<button
-								class="btn btn-success w-100"
+						<div class="col">
+							<a
 								id="current-location-button"
+								class="d-flex text-primary text-decoration-none"
+								href="#"
+								>Get current location📍</a
 							>
-								Current📍
-							</button>
 						</div>
 						<br />
 						<h5 class="clearfix" id="date">Date Time</h5>
@@ -104,12 +98,11 @@
 									<p class="fs-1">😃</p>
 								</div>
 							</div>
-							<div id="city" class="col-10 fs-1 text-center">
-								Temprature <br />
-								<span class="temperature" id="temperature"
-									>°C</span
-								>
+							<div class="col-10 fs-1 text-center">
+								<div id="city"></div>
+								<div id="temperature"></div>
 							</div>
+
 							<div class="col-6">
 								<ul>
 									<li>
