--- a/index.html
+++ b/index.html
@@ -22,7 +22,27 @@
 	</head>
 	<body class="bg-light bg-gradient">
 		<div class="body bg-success p-2 text-dark bg-opacity-25 shadow">
-			<h1 class="mt-5">Weather</h1>
+			<h1 class="mt-5">
+				Weather
+				<svg
+					xmlns="http://www.w3.org/2000/svg"
+					width="50"
+					height="50"
+					fill="currentColor"
+					class="text-center bi-cloud-sun"
+					viewBox="0 0 16 16 "
+				>
+					<path
+						d="M7 8a3.5 3.5 0 0 1 3.5 3.555.5.5 0 0 0 .624.492A1.503 1.503 0 0 1 13 13.5a1.5 1.5 0 0 1-1.5 1.5H3a2 2 0 1 1 .1-3.998.5.5 0 0 0 .51-.375A3.502 3.502 0 0 1 7 8zm4.473 3a4.5 4.5 0 0 0-8.72-.99A3 3 0 0 0 3 16h8.5a2.5 2.5 0 0 0 0-5h-.027z"
+					/>
+					<path
+						d="M10.5 1.5a.5.5 0 0 0-1 0v1a.5.5 0 0 0 1 0v-1zm3.743 1.964a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 0 0 .708.708l.707-.708zm-7.779-.707a.5.5 0 0 0-.707.707l.707.708a.5.5 0 1 0 .708-.708l-.708-.707zm1.734 3.374a2 2 0 1 1 3.296 2.198c.199.281.372.582.516.898a3 3 0 1 0-4.84-3.225c.352.011.696.055 1.028.129zm4.484 4.074c.6.215 1.125.59 1.522 1.072a.5.5 0 0 0 .039-.742l-.707-.707a.5.5 0 0 0-.854.377zM14.5 6.5a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"
+					/>
+				</svg>
+			</h1>
+
+			<!-- <br />
+									<p class="fs-1">😃</p> -->
 			<!--  ml-5 mr-5 mb-5 mx-5 my-12 -->
 			<!-- Command asuult -->
 			<div class="container">
@@ -70,34 +90,15 @@
 							>
 						</div>
 						<br />
+
 						<h5 class="clearfix" id="date">Date Time</h5>
-						<br />
+						<span></span>
 						<h5 id="description">Weather description</h5>
 					</div>
 
 					<div class="col">
 						<div class="row">
-							<div class="col-2">
-								<div class="icon">
-									<svg
-										xmlns="http://www.w3.org/2000/svg"
-										width="50"
-										height="50"
-										fill="currentColor"
-										class="text-center bi-cloud-sun"
-										viewBox="0 0 16 16 "
-									>
-										<path
-											d="M7 8a3.5 3.5 0 0 1 3.5 3.555.5.5 0 0 0 .624.492A1.503 1.503 0 0 1 13 13.5a1.5 1.5 0 0 1-1.5 1.5H3a2 2 0 1 1 .1-3.998.5.5 0 0 0 .51-.375A3.502 3.502 0 0 1 7 8zm4.473 3a4.5 4.5 0 0 0-8.72-.99A3 3 0 0 0 3 16h8.5a2.5 2.5 0 0 0 0-5h-.027z"
-										/>
-										<path
-											d="M10.5 1.5a.5.5 0 0 0-1 0v1a.5.5 0 0 0 1 0v-1zm3.743 1.964a.5.5 0 1 0-.707-.707l-.708.707a.5.5 0 0 0 .708.708l.707-.708zm-7.779-.707a.5.5 0 0 0-.707.707l.707.708a.5.5 0 1 0 .708-.708l-.708-.707zm1.734 3.374a2 2 0 1 1 3.296 2.198c.199.281.372.582.516.898a3 3 0 1 0-4.84-3.225c.352.011.696.055 1.028.129zm4.484 4.074c.6.215 1.125.59 1.522 1.072a.5.5 0 0 0 .039-.742l-.707-.707a.5.5 0 0 0-.854.377zM14.5 6.5a.5.5 0 0 0 0 1h1a.5.5 0 0 0 0-1h-1z"
-										/>
-									</svg>
-									<br />
-									<p class="fs-1">😃</p>
-								</div>
-							</div>
+							<div class="col-2"></div>
 							<div class="col-10 fs-1 text-center">
 								<div id="city"></div>
 								<div id="temperature"></div>
@@ -105,10 +106,10 @@
 
 							<div class="col-6">
 								<ul>
-									<li>
+									<!-- <li>
 										Precipitation:
 										<span id="precipitation"> </span>
-									</li>
+									</li> -->
 									<li>
 										Humidity:
 										<span id="humidity"></span> %
@@ -122,7 +123,7 @@
 			</div>
 
 			<div
-				class="row fs-5 p-2 bg-primary text-white rounded-3 text-center mx-2"
+				class="row fs-5 p-2 text-bg-light text-secondary p-3 rounded-3 text-center mx-2"
 			>
 				<div class="col">Mon</div>
 				<div class="col">Tue</div>
@@ -134,51 +135,51 @@
 			</div>
 			<div class="row py-2 fs-6 text-center mx-2">
 				<div class="col">
-					<p class="fs-6">
-						Hi: 83° <br />
-						Lo: 55°
+					<p class="fs-6 mon">
+						<span class="emoji"></span>
+						<span class="temp"></span>
 					</p>
 				</div>
 
 				<div class="col">
-					<p class="fs-6">
-						Hi: 83° <br />
-						Lo: 55°
+					<p class="fs-6 tue">
+						<span class="emoji"></span>
+						<span class="temp"></span>
 					</p>
 				</div>
 
 				<div class="col">
-					<p class="fs-6">
-						Hi: 83° <br />
-						Lo: 55°
+					<p class="fs-6 wed">
+						<span class="emoji"></span>
+						<span class="temp"></span>
 					</p>
 				</div>
 
 				<div class="col">
-					<p class="fs-6">
-						Hi: 83° <br />
-						Lo: 55°
+					<p class="fs-6 thu">
+						<span class="emoji"></span>
+						<span class="temp"></span>
 					</p>
 				</div>
 
 				<div class="col">
-					<p class="fs-6">
-						Hi: 83° <br />
-						Lo: 55°
+					<p class="fs-6 fri">
+						<span class="emoji"></span>
+						<span class="temp"></span>
 					</p>
 				</div>
 
 				<div class="col">
-					<p class="fs-6">
-						Hi: 83° <br />
-						Lo: 55°
+					<p class="fs-6 sat">
+						<span class="emoji"></span>
+						<span class="temp"></span>
 					</p>
 				</div>
 
 				<div class="col">
-					<p class="fs-6">
-						Hi: 83° <br />
-						Lo: 55°
+					<p class="fs-6 sun">
+						<span class="emoji"></span>
+						<span class="temp"></span>
 					</p>
 				</div>
 			</div>
